# qremote

./: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.waveshare_amoled  sdkconfig.esp32s3
components/microosc/: CMakeLists.txt
components/microosc/compat/: Arduino.h  Print.h  Udp.h
include/: config.h
src/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  idf_component.yml  main.c  main.cpp  osc_bridge.cpp  osc_bridge.h
